Always using .m2/repository as artifact repo